--- a/styles/main.css
+++ b/styles/main.css
@@ -29,6 +29,7 @@
 
 .u-content__wrap {
   width: 90%;
+  max-width: 210rem;
   height: 100%;
   display: flex;
 }
@@ -173,7 +174,8 @@ header .header__btn .landing-btn:visited:hover::after {
 }
 @media (max-width: 576px) {
   header .header__btn {
-    padding: 0;
+    align-items: flex-start;
+    padding-top: 5%;
   }
   header .header__btn .landing-btn:link,
   header .header__btn .landing-btn:visited {
@@ -397,6 +399,7 @@ header .header__btn .landing-btn:visited:hover::after {
 #destination {
   height: 100vh;
   width: 100vw;
+  max-width: 210rem;
   color: #ffffff;
 }
 #destination .container {
@@ -542,7 +545,7 @@ header .header__btn .landing-btn:visited:hover::after {
     height: 50%;
     width: 100%;
     align-items: center;
-    justify-content: center;
+    justify-content: flex-start;
     text-align: center;
   }
   #destination .content__wrap-text nav {
@@ -564,19 +567,26 @@ header .header__btn .landing-btn:visited:hover::after {
   }
 }
 @media (max-width: 576px) {
+  #destination .content__wrap-img {
+    height: 40%;
+  }
   #destination .content__wrap-img .heading-5 {
     align-self: center;
     margin-top: 8rem;
+  }
+  #destination .content__wrap-text {
+    height: 50%;
+    padding: 0 3rem;
   }
   #destination .content__wrap-text nav {
     margin-top: 0;
   }
   #destination .content__wrap-text .content-para {
-    padding-bottom: 2.5rem;
+    padding-bottom: 1.5rem;
   }
   #destination .content__wrap-text .content__wrap-footer {
-    flex-direction: column;
-    gap: 1rem;
+    width: 100%;
+    gap: 10%;
   }
 }
 #technology {
@@ -863,25 +873,27 @@ h5, p, a {
 }
 .navbar .line {
   height: 0.5px;
-  min-width: 33vw;
+  min-width: 30%;
   background-color: #ffffff;
   position: absolute;
   left: 10.5%;
 }
 .navbar .nav {
-  width: 57%;
-  width: 57vw;
+  min-width: 65%;
   position: absolute;
   right: 0;
   background-color: rgba(255, 255, 255, 0.04);
+  backdrop-filter: blur(5px);
   -webkit-backdrop-filter: blur(5px);
-          backdrop-filter: blur(5px);
   opacity: 0.9;
 }
 .navbar .nav ol {
   display: flex;
-  justify-content: space-evenly;
+  justify-content: center;
   list-style: none;
+}
+.navbar .nav ol li {
+  margin-right: 5rem;
 }
 .navbar .nav ol li a {
   display: inline-block;
@@ -891,7 +903,7 @@ h5, p, a {
   line-height: 1.92rem;
   letter-spacing: 0.2rem;
   font-weight: 400;
-  padding: 2rem;
+  padding: 2rem 1rem;
 }
 .navbar .nav ol li span {
   font-weight: 700;
@@ -971,8 +983,8 @@ h5, p, a {
   width: 100%;
   height: 100%;
   background-color: rgba(255, 255, 255, 0.04);
+  backdrop-filter: blur(40.77px);
   -webkit-backdrop-filter: blur(40.77px);
-          backdrop-filter: blur(40.77px);
 }
 .navbar .mobile__nav .menu .mo-nav ol {
   display: flex;
@@ -1005,12 +1017,12 @@ h5, p, a {
 
 @media (max-width: 992px) {
   .navbar .line {
-    width: 30vw;
+    width: 25vw;
   }
-  .navbar nav {
-    width: 50vw;
+  .navbar .nav {
+    width: 60vw;
   }
-  .navbar nav ol li a span {
+  .navbar .nav ol li a span {
     display: none;
   }
 }
